# rust-sudoku-solver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: consts.rs  debug.rs  error.rs  hidden.rs  lib.rs  main.rs  solver.rs  sudoku.rs  triples.rs  visible.rs
